# SyriusCore

./: AppLayer.cpp  AppLayer.hpp  AppMain.cpp  CMakeLists.txt  Driver.cpp  Driver.hpp  MainGtest.cpp  OpenGLTest.cpp  OpenGLTest.hpp  README.md  RenderDocCaptureSettingsSyriusTest.cap  TestMain.cpp  main.cpp
.github/workflows/: main.yml
AppLayers/: TestConstantBuffer.cpp  TestContext.hpp  TestCubemap.cpp  TestCubemap.hpp  TestDepthTest.cpp  TestDepthTest.hpp  TestFrameBuffer.cpp  TestImGui.hpp  TestShaderStorageBuffer.cpp  TestShaderStorageBuffer.hpp  TestTexture.hpp  TestVertexBuffer.cpp
Resources/Shaders/GLSL/: Apollonian_fs.glsl  Basic.frag  Basic.vert  Basic_fs.glsl  ConstantBuffer_fs.glsl  ConstantBuffer_vs.glsl  Cubemap_fs.glsl  Cubemap_vs.glsl  FractalPyramid_fs.glsl  FrameBuffer_fs.glsl  GeometryPass_fs.glsl  GeometryPass_vs.glsl  Geometry_vs.glsl  Invert.frag  LightAndMotion_fs.glsl  LightPass_fs.glsl  LightPass_vs.glsl  MVP_fs.glsl  MVP_vs.glsl  Mandelbulb_fs.glsl  Octagrams_fs.glsl  PhongLight_fs.glsl  PhongLight_vs.glsl  PulsatingWaves_fs.glsl  Screen.frag  Screen.vert  Screen_fs.glsl  Screen_vs.glsl  ShaderStorageBuffer_vs.glsl  Skybox_fs.glsl  Skybox_vs.glsl  Texture_fs.glsl  Texture_vs.glsl  VertexBuffer_fs.glsl  VertexBuffer_vs.glsl
Resources/Shaders/HLSL/: Basic-fs.hlsl  Basic-vs.hlsl  Basic.frag  Basic.vert  Basic_fs.hlsl  Basic_vs.hlsl  ConstantBuffer_fs.hlsl  ConstantBuffer_vs.hlsl  Cubemap_fs.hlsl  Cubemap_vs.hlsl  FrameBuffer_fs.hlsl  GeometryPass_fs.hlsl  GeometryPass_vs.hlsl  Geometry_vs.hlsl  LightPass_fs.hlsl  LightPass_vs.hlsl  MVP_fs.hlsl  MVP_vs.hlsl  Screen-fs.hlsl  Screen-vs.hlsl  Screen.frag  Screen.vert  Screen_fs.hlsl  Screen_vs.hlsl  ShaderStorageBuffer_vs.hlsl  Texture_fs.hlsl  Texture_vs.hlsl
Resources/Shaders/SPIRV/: Basic-vs.spv
Resources/TestShaders/GLSL/: ConstantBuffer_fs.glsl  Cubemap_vs.glsl  MVP_vs.glsl  ShaderStorageBuffer_vs.glsl  Texture_fs.glsl  VertexBuffer-vs.glsl  VertexBuffer_fs.glsl  VertexBuffer_vs.glsl
Resources/TestShaders/HLSL/: ConstantBuffer_fs.hlsl  ShaderStorageBuffer_vs.hlsl  Texture_fs.hlsl  Texture_vs.hlsl  VertexBuffer_fs.hlsl  VertexBuffer_vs.hlsl
SyriusCoreApp/: AppComponent.cpp  AppComponent.hpp  Camera.cpp  Camera.hpp  Include.hpp  Layer.cpp  Layer.hpp  Material.cpp  Material.hpp  Projection.cpp  Projection.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  SyriusCoreApp.cpp  SyriusCoreApp.hpp  SyriusCoreDev.cpp  SyriusCoreDev.hpp  Utils.cpp  Utils.hpp
SyriusCoreApp/Components/: DebugInfo.cpp  DebugInfo.hpp  RectangleVAO.cpp  RectangleVAO.hpp  RectangleVBO.cpp  RectangleVBO.hpp
SyriusCoreApp/Layers/: ConstantBufferLayer.cpp  ConstantBufferLayer.hpp  CubeMapLayer.cpp  CubeMapLayer.hpp  DeferredPBRLayer.cpp  DeferredPBRLayer.hpp  DepthTestLayer.cpp  DepthTestLayer.hpp  FrameBufferCubeMapLayer.cpp  FrameBufferCubeMapLayer.hpp  FrameBufferLayer.cpp  FrameBufferLayer.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  IndexBufferLayer.cpp  IndexBufferLayer.hpp  PhongLightLayer.cpp  PhongLightLayer.hpp  SamplerLayer.cpp  SamplerLayer.hpp  ShaderLayer.cpp  ShaderLayer.hpp  TextureAtlasLayer.cpp  TextureAtlasLayer.hpp  TextureLayer.cpp  TextureLayer.hpp  VertexArrayLayer.cpp  VertexArrayLayer.hpp  VertexBufferLayer.cpp  VertexBufferLayer.hpp
SyriusCoreDev/: Camera.cpp  Camera.hpp  Driver.cpp  Driver.hpp  Include.hpp  Layer.cpp  Layer.hpp  Projection.cpp  Projection.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  SyriusCoreDev.cpp  SyriusCoreDev.hpp  Utils.cpp  Utils.hpp
SyriusCoreSandBox/: ComponentContainer.cpp  ComponentContainer.hpp  SandBox.cpp  SandBox.hpp  SandBoxInclude.hpp  Utils.cpp  Utils.hpp
SyriusCoreSandBox/ComponentLayers/: CubeMapLayer.cpp  CubeMapLayer.hpp  Debug.cpp  Debug.hpp  DeferredPBRLayer.cpp  DeferredPBRLayer.hpp  FrameBufferLayer.cpp  FrameBufferLayer.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  IndexDraw.cpp  IndexDraw.hpp  MVP.cpp  MVP.hpp  MVPTextured.cpp  MVPTextured.hpp  PBRLayer.cpp  PBRLayer.hpp  ShaderStorageBufferLayer.cpp  ShaderStorageBufferLayer.hpp  VertexDraw.cpp  VertexDraw.hpp
SyriusCoreSandBox/Components/: Camera.cpp  Camera.hpp  Debug.cpp  Debug.hpp  DepthTest.cpp  DepthTest.hpp  IndexDraw.cpp  MaterialComponent.cpp  MaterialComponent.hpp  MeshComponent.cpp  MeshComponent.hpp  Projection.cpp  Projection.hpp  ProjectionComponent.cpp  ProjectionComponent.hpp  SamplerComponent.cpp  SamplerComponent.hpp  ShaderComponent.cpp  ShaderComponent.hpp  TextureComponent.cpp  TextureComponent.hpp  VertexDraw.cpp  VertexDraw.hpp
SyriusCoreSandBox/Core/: ComponentContainer.cpp  ComponentContainer.hpp  IComponent.cpp  IComponent.hpp  IComponentFactory.hpp
TestLayers/: BasicLayer.cpp  BasicLayer.hpp  TestConstantBuffer.cpp  TestConstantBuffer.hpp  TestContext.cpp  TestCubemap.cpp  TestCubemap.hpp  TestDepthTest.cpp  TestDepthTest.hpp  TestFrameBuffer.cpp  TestFrameBuffer.hpp  TestImGui.cpp  TestIndexBuffer.cpp  TestIndexBuffer.hpp  TestShaderStorageBuffer.cpp  TestShaderStorageBuffer.hpp  TestTexture.cpp  TestTexture.hpp  TestVertexBuffer.cpp  TestVertexBuffer.hpp
Tests/: AwesomeFace.hpp  FramebufferTest.cpp  FramebufferTest.hpp  ShaderSource.hpp  TestEnvironment.cpp  TestEnvironment.hpp  TestInclude.hpp  TestUtils.hpp
Tests/Context/: ConstantBufferTest.cpp  ConstantBufferTest.hpp  CubeMapLayoutTest.cpp  CubeMapLayoutTest.hpp  CubeMapTest.cpp  CubeMapTest.hpp  FrameBufferShaders.hpp  FrameBufferTest.cpp  FrameBufferTest.hpp  FramebufferLayoutTest.cpp  FramebufferLayoutTest.hpp  IndexBufferTest.cpp  IndexBufferTest.hpp  ShaderModuleTest.cpp  ShaderModuleTest.hpp  ShaderStorageBufferTest.cpp  ShaderStorageBufferTest.hpp  ShaderTest.cpp  Texture2DTest.cpp  Texture2DTest.hpp  VertexBufferTest.cpp  VertexBufferTest.hpp  VertexLayoutTest.cpp  VertexLayoutTest.hpp
Tests/Image/: ImageF32Test.cpp  ImageF32Test.hpp  ImageUI8Test.cpp  ImageUI8Test.hpp  ImageUtilsTest.cpp  ImageUtilsTest.hpp
Tests/Utils/: ConversionsTest.cpp  ConversionsTest.hpp
include/SyirusCore/: SyriusCoreInclude.hpp
include/SyriusCore/: ExportCore.hpp  SyriusCore.hpp
src/SyriusCore/: SyriusCore.cpp
(+349 files in other folders)
